--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^2.27.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1",
+    "wagmi": "^0.6.5"
   },
   "devDependencies": {
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3"
   }
 }
